2014-08-01 Added new property, "Random order", to Source List module
2014-08-01 Fixed LearnPen module name
2014-08-01 Added responding to Show Answers events in Choice module
2014-08-01 Added separate CSS classes for elements in show answers mode in True/False module
2014-08-01 Fixed problem with checking case sensitive answers in Table module gaps
2014-08-01 Extended TextParser service gaps API with additional options property
2014-07-31 Added isAllOK() command and AllOK event to Crossword module.
2014-07-30 Fixed text wrapping and removed problem with double scroll bars in Paragraph module
2014-07-30 Added possibility of custom styling each cell (via CSS styles and classes) in Writing Calculations module
2014-07-29 Fixed responding to Check Answers button in True/False module while it's set as not-activity
2014-07-29 Added isAllOK() command and AllOK event to Memo Game module.
2014-07-29 Added responding to Show Answers events in True/False module
2014-07-29 Added new module: Show Answers
2014-07-25 Added new module: Page Rating
2014-07-24 Added new module: Sudoku
2014-07-24 Added new command to Player Services - sendPageAllOkOnValueChanged()
2014-07-24 Added isAllOK() command to Ordering module
2014-07-24 Fixed problem with image size in Slider addon
2014-07-23 Added reset() command to Image Source module
2014-07-23 Fixed centering content in both Single View and Book View modes for Text Identification module
2014-07-23 Added support for drag & drop in Points and Lines module
2014-07-23 Added support for drag & drop in Connecting Dots module
2014-07-23 Added default HTML player to Audio addon
2014-07-22 Removed tooltip from Close popup Button module
2014-07-16 Crossword - setting position of a cursor to the end on the focus
2014-07-16 Fixed problem with Popup module when appears in iframe
2014-07-16 Fixed Writing Calculation scoring
2014-07-15 Fixed draggable elements on Win8 Mobile/IE10